<resources>

    <!-- Section 1 -->
    <string name="app_name">hotpot0</string>
    <string name="small_heading">Welcome to</string>
    <string name="heading">Eventure</string>
    <string name="create_profile_button_text">Create Profile</string>
    <string name="admin_login_button_text">Admin Login</string>
    <string name="admin_login_text">Admin Login</string>

    <!-- Section 2 -->
    <string name="search">Search</string>
    <string name="info">Info</string>
    <string name="scan">Scan</string>
    <string name="search_event">Search Event</string>
    <string name="home">Home</string>
    <string name="my_events">My Events</string>
    <string name="create_event">Create Event</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="confirmed">Confirmed</string>
    <string name="pending">Pending</string>
    <string name="past_events">Past Events</string>
    <string name="upload_image">Upload Image</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Event Description</string>
    <string name="event_guidelines">Event Guidelines</string>
    <string name="location">Location</string>
    <string name="what_time_does_event_occur">Event Start Time</string>
    <string name="when_does_event_occur">When does event occur? YYYY-MM-DD</string>
    <string name="price_of_event">Event Price</string>
    <string name="number_of_people_you_can_accommodate">Event Total Capacity</string>
    <string name="preview_event">Preview Event</string>
    <string name="how_long_will_event_occur_dd_mm_yyyy_dd_mm_yyyy">How long will event occur?</string>
    <string name="registration_period_dd_mm_yyyy_dd_mm_yyyy">Registration period</string>
    <string name="geolocation_for_participants">Geolocation for Participants</string>
    <string name="back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="decline">Decline</string>
    <string name="role">Role</string>
    <string name="current_invitations">Current Invitations</string>
    <string name="other_updates">Other Updates</string>
    <string name="fill_spots">Fill Spots</string>
    <string name="sampled_entrants">Pending Entrants</string>
    <string name="accepted_entrants">Accepted Entrants</string>
    <string name="cancelled_entrants">Cancelled Entrants</string>
    <string name="all_entrants">All Entrants</string>
    <string name="event_location">Location %1$s</string>
    <string name="event_time">Time %1$s</string>
    <string name="event_date">Date %1$s</string>
    <string name="event_duration">Duration %1$s</string>
    <string name="event_price">Price %1$s CAD</string>
    <string name="event_capacity">Capacity: %1$s</string>
    <string name="event_registration">Registration Period: %1$s</string>
    <string name="event_geolocation">Geolocation for participants: %1$s</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="event_created_success">Event created successfully!</string>
    <string name="filter">Filters</string>
    <string name="save">Save</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="qr_text">Please position QR code in the box</string>
    <string name="invitation_text">You have been invited to join!</string>
    <string name="rejection_text">We’re sorry, you have not been selected to join. Do you want to remain in Wait List?</string>
    <string name="join_waitlist">Join</string>
    <string name="leave_waitlist">Leave</string>
    <string name="name">Name</string>
    <string name="geo_location">Geo-Location</string>
    <string name="generate_sample">Generate Sample</string>
    <string name="qr_code_scanner">QR Code Scanner</string>
    <string name="map">Map</string>
    <string name="attendees">Attendees</string>
    <string name="export_csv">Export CSV</string>

    <string name="select_event_time">Select Event Time</string>
    <string name="select_event_start_date">Select Event Start Date</string>
    <string name="select_event_end_date">Select Event End Date</string>
    <string name="select_registration_start_date">Select Registration Start Date</string>
    <string name="select_registration_end_date">Select Registration End Date</string>
    <string name="go_to_event">Go to Event</string>
    <string name="remove_event">remove_event</string>
    <string name="event_not_joinable">This event is closed</string>

    <!-- Section 3 -->

</resources>