<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <!-- Scrollable content -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <Button
                android:id="@+id/button_BackPostDraw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:backgroundTint="@color/text"
                android:text="@string/back"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:padding="6dp"
                android:layout_gravity="start" />

            <!-- Page Title -->
            <TextView
                android:id="@+id/title_create_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Event Name"
                android:textColor="@color/text"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/title_attendees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attendees"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="16dp"/>

            <LinearLayout
                android:id="@+id/sampled_entrants_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <include layout="@layout/profile_blob" />
                <include layout="@layout/profile_blob" />
                <include layout="@layout/profile_blob" />

                <Button
                    android:id="@+id/button_fillSpots"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/export_csv"
                    android:textColor="#FFFFFF"
                    android:backgroundTint="@color/text"
                    android:layout_marginTop="16dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <!-- Bottom Navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/bar"
        app:menu="@menu/bottom_nav_menu"
        app:itemIconTint="@color/nav_item_selector"
        app:itemTextColor="@color/nav_item_selector"
        app:labelVisibilityMode="labeled"
        app:itemIconSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
